# rust-bpf-sysroot

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  Xargo.toml  bpfel_unknown_unknown.json  build.sh  install.sh  shellcheck.sh
.cargo/: config
src/: lib.rs
src/alloc/: Cargo.toml
src/compiler-rt/lib/asan/: asan_linux.cc
src/compiler-rt/lib/builtins/bpf/: udivmodti4.c
src/compiler-rt/lib/sanitizer_common/: sanitizer_linux_libcdep.cc  sanitizer_platform_limits_posix.cc  sanitizer_posix.cc
src/compiler-rt/lib/xray/: xray_x86_64.cc
src/core/: Cargo.toml
src/core/src/: panic.rs
src/core/src/fmt/: float.rs  mod.rs  num.rs
src/core/src/num/flt2dec/: mod.rs
src/core/src/sync/: atomic.rs
src/liballoc/: Cargo.toml  boxed.rs  lib.rs
src/libcore/: Cargo.toml  clone.rs  cmp.rs  default.rs  hint.rs  lib.rs  marker.rs  panic.rs  panicking.rs  ptr.rs
src/libcore/fmt/: builders.rs  float.rs  mod.rs  num.rs
src/libcore/hash/: mod.rs  sip.rs
src/libcore/iter/: range.rs  traits.rs
src/libcore/iter/traits/: accum.rs
src/libcore/num/: mod.rs  wrapping.rs
src/libcore/num/flt2dec/: mod.rs
src/libcore/num/flt2dec/strategy/: grisu.rs
src/libcore/ops/: arith.rs  bit.rs
src/libcore/slice/: memchr.rs  mod.rs
src/libcore/sync/: atomic.rs
src/libcore/tests/: nonzero.rs
src/libpanic_abort/: Cargo.toml  lib.rs
src/libstd/: Cargo.toml  alloc.rs  env.rs  error.rs  lib.rs  macros.rs  panic.rs  panicking.rs  process.rs  rt.rs
src/libstd/collections/hash/: map.rs
src/libstd/io/: lazy.rs  mod.rs  stdio.rs
src/libstd/os/: mod.rs
src/libstd/sys/: mod.rs
src/libstd/sys/bpf/: args.rs  mod.rs  mutex.rs  os.rs  stack_overflow.rs  stdio.rs  thread.rs
src/libstd/sys_common/: at_exit_imp.rs  backtrace.rs  mod.rs  remutex.rs  thread.rs  util.rs
src/libstd/thread/: local.rs  mod.rs
src/libunwind/: Cargo.toml
src/panic_abort/: Cargo.toml
src/panic_abort/src/: lib.rs
src/rustc-std-workspace-alloc/: Cargo.toml
src/rustc-std-workspace-core/: Cargo.toml
src/std/: Cargo.toml  build.rs
src/std/src/: alloc.rs  error.rs  lazy.rs  lib.rs  macros.rs  panic.rs  panicking.rs  process.rs  rt.rs
src/std/src/io/: mod.rs  stdio.rs
src/std/src/sync/: once.rs
src/std/src/sys/: mod.rs
src/std/src/sys/bpf/: alloc.rs  args.rs  condvar.rs  condvar_atomics.rs  env.rs  fs.rs  io.rs  mod.rs  mutex.rs  mutex_atomics.rs  net.rs  os.rs  pipe.rs  process.rs  rwlock.rs  thread.rs  time.rs
src/std/src/sys_common/: at_exit_imp.rs  backtrace.rs  mod.rs  mutex.rs  remutex.rs  thread.rs
src/std/src/thread/: local.rs  mod.rs
src/unwind/: Cargo.toml
test/: Cargo.toml  build.sh
test/src/: lib.rs
