
[package]
name = "rust_bpf_sysroot"
version = "0.0.1"
description = "Solana BPF noop program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[lib]
name = "rust_bpf_sysroot"
crate-type = ["cdylib"]

[package.metadata.cargo-sysroot]
target = "bpfel_unknown_unknown.json"
path = "../../../../sdk/bpf/rust-sysroot"

[package.metadata.cargo-xbuild]
sysroot_path = "../../../../sdk/bpf/rust-sysroot"

[package.metadata.xargo]
sysroot_path = "../../../../sdk/bpf/rust-sysroot"
path = "../../../../sdk/bpf/rust-sysroot"
sysroot = "../../../../sdk/bpf/rust-sysroot"

