
[package]
name = "rust_bpf_sysroot"
version = "0.0.1"
description = "Solana BPF noop program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[lib]
name = "rust_bpf_sysroot"
crate-type = ["cdylib"]


