[package]
authors = ["The Rust Project Developers"]
name = "panic_abort"
version = "0.0.0"
edition = "2018"

[lib]
test = false
bench = false
doc = false

[dependencies]
cfg-if = { path = "../cfg-if", features = ['rustc-dep-of-std'] }
core = { path = "../core" }
libc = { version = "0.2", default-features = false }
compiler_builtins = { path = "../compiler-builtins" }
